--- a/dubbo-consumer/src/main/resources/application.properties
+++ b/dubbo-consumer/src/main/resources/application.properties
@@ -1,7 +1,10 @@
-server.port=17723
+server.port=9998
 spring.application.name=dubbo3-montos-consumer
+dubbo.application.name=dubbo3-montos-consumer
 dubbo.registry.address=nacos://127.0.0.1:8848
 #dubbo.protocol.name=tri
-dubbo.protocol.serialization=protostuff
-dubbo.protocol.port=20880
+dubbo.protocol.name=dubbo
+dubbo.protocol.serialization=java
+dubbo.protocol.port=20881
 dubbo.metadata-report.sync.report=false
+dubbo.registry.timeout=30000
