--- a/dubbo-provider/src/main/resources/application.properties
+++ b/dubbo-provider/src/main/resources/application.properties
@@ -1,7 +1,12 @@
-server.port=17722
 spring.application.name=dubbo3-montos-provider
-dubbo.registry.address=nacos://127.0.0.1:8848
-dubbo.protocol.serialization=protostuff
+server.port=9999
+dubbo.application.name=dubbo3-montos-provider
 #dubbo.protocol.name=tri
+dubbo.protocol.name=dubbo
 dubbo.protocol.port=20880
+dubbo.protocol.serialization=java
+dubbo.registry.address=nacos://127.0.0.1:8848
+dubbo.registry.timeout=30000
+#dubbo.provider.retries=-1
+#dubbo.provider.delay=-1
 dubbo.metadata-report.sync.report=false
